--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@angular/common": "^15.1.0",
     "@angular/compiler": "^15.1.0",
     "@angular/core": "^15.1.0",
-    "@angular/forms": "^15.1.0",
+    "@angular/forms": "^15.2.9",
     "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@ngneat/elf": "^2.3.2",
+    "@ngneat/elf-entities": "^4.5.0",
     "angular-star-rating": "^6.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
